--- a/index.html
+++ b/index.html
@@ -114,22 +114,10 @@
       <div class="about-content">
         <h3>I'm <span class="om">Om -Prakash-Mishra</span></h3>
         <h3>Full Stack Web Developer</h3>
-        <p id="user-detail-intro">
-          Hello, I am Om -Prakash-Mishra, a recent graduate with a Bachelor's Engineering. I am currently undergoing training at MASAI School to pursue a career in
-          software development.
-<br><br>
-          My passion for taking on new challenges and learning new things drives me forward. I enjoy solving problems
-          and helping others, and I believe every challenge presents an opportunity for growth and development. Besides
-          my academic pursuits, I have a keen interest in a variety of games, including  cricket, Travelling
-<br><br>
-          When it comes to technical expertise, I have worked with a range of programming languages and technologies,
-          including HTML, CSS, JS, Mongoose,MongoDB,Express, SQL, React,React Redux.
-<br><br>
-          As a fresher, I am excited to kickstart my career in the tech industry and explore new opportunities to apply
-          my knowledge and skills. I am confident that my dedication, enthusiasm, and passion for learning and growing
-          will make me an asset to any team I work with. Thank you for considering me for this interview, and I look
-          forward to discussing my aspirations and journey with you.
+        <p style="font-family: 'Arial', sans-serif; font-size: 16px; line-height: 1.5;  margin: 10px 0;">
+          The recent engineering graduate, currently training at MASAI School for a software development career, exudes a passion for conquering challenges and continuous learning. Beyond academics, they find joy in games like cricket and possess a keen interest in travel. Proficient in HTML, CSS, JS, Mongoose, MongoDB, Express, SQL, React, and React Redux, their eagerness to kickstart a tech career is coupled with dedication, enthusiasm, and a proactive approach, fostering confidence in their ability to make significant contributions to any team. They express gratitude for interview consideration and eagerly anticipate discussing aspirations and journey.
         </p>
+        
 
       </div>
   </section>
