--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
       <div class="about-content">
         <h3>I'm <span class="om">Om -Prakash-Mishra</span></h3>
         <h3>Full Stack Web Developer</h3>
-        <p style="font-family: 'Arial', sans-serif; font-size: 16px; text-align: justify;  margin: 10px 0;  word-spacing: normal; word-wrap: break-word;">
-          The recent engineering graduate, currently training at MASAI School for a software development career, exudes a passion for conquering challenges and continuous learning. Beyond academics, they find joy in games like cricket and possess a keen interest in travel. Proficient in HTML, CSS, JS, Mongoose, MongoDB, Express, SQL, React, and React Redux, their eagerness to kickstart a tech career is coupled with dedication, enthusiasm, and a proactive approach, fostering confidence in their ability to make significant contributions to any team. They express gratitude for interview consideration and eagerly anticipate discussing aspirations and journey.
+        <p style="font-family: 'Arial', sans-serif; font-size: 16px; text-align: justify;  margin: 10px 0;  word-spacing: normal; word-wrap: break-word; line-height: 1.5;font-size: 17px;">
+          The recent engineering graduate, currently training at MASAI School for a software development career, exudes a passion for conquering challenges and continuous learning. Beyond academics, they find joy in games like cricket and possess a keen interest in travel. Proficient in HTML, CSS, JS, Mongoose, MongoDB, Express,Node.js, React, and React Redux, their eagerness to kickstart a tech career is coupled with dedication, enthusiasm, and a proactive approach, fostering confidence in their ability to make significant contributions to any team. They express gratitude for interview consideration and eagerly anticipate discussing aspirations and journey.
         </p>
         
 
